# ximeaAPItest

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  xiApiPlusOcv.cpp
